--- a/simulation/templates/template_structure_military_castro.xml
+++ b/simulation/templates/template_structure_military_castro.xml
@@ -10,9 +10,9 @@
       <metal>100</metal>
     </Resources>
   </Cost>
-  <Footprint>
-    <Square width="19.0" depth="19.0"/>
-    <Height>12.0</Height>
+  <Footprint replace="">
+    <Circle radius="17.0"/>
+    <Height>18.0</Height>
   </Footprint>
   <GarrisonHolder>
     <Max>5</Max>
@@ -34,7 +34,7 @@
     <stone>20</stone>
   </Loot>
   <Obstruction>
-    <Static width="17.0" depth="17.0"/>
+    <Static width="29.0" depth="29.0"/>
   </Obstruction>
   <Sound>
     <SoundGroups>
@@ -42,6 +42,7 @@
       <constructed>interface/complete/building/complete_barracks.xml</constructed>
     </SoundGroups>
   </Sound>
+  <ProductionQueue/>
   <Trainer>
     <Entities datatype="tokens">
       units/{civ}/infantry_swordsman_a
