Implementado algumas correções (WIP).

--- a/simulation/templates/template_structure_military_barracks.xml
+++ b/simulation/templates/template_structure_military_barracks.xml
@@ -67,6 +67,7 @@
       units/{civ}/champion_infantry_maceman
       units/{civ}/champion_infantry_axeman
       units/{civ}/champion_infantry_swordsman
+      units/{civ}/infantry_scout
     </Entities>
   </Trainer>
   <Vision>
