--- a/simulation/templates/template_structure_military_stable_camel.xml
+++ b/simulation/templates/template_structure_military_stable_camel.xml
@@ -27,7 +27,7 @@
     <SelectionGroupName>template_structure_military_stable</SelectionGroupName>
     <Tooltip>Train Camelry and research Camelry technologies.</Tooltip>
     <VisibleClasses datatype="tokens">Village Stable</VisibleClasses>
-    <Icon>structures/stable_01.png</Icon>
+    <Icon>structures/camel_stable.png</Icon>
     <Requirements>
       <Techs datatype="tokens">phase_village</Techs>
     </Requirements>
