--- a/simulation/templates/template_structure_civic_temple.xml
+++ b/simulation/templates/template_structure_civic_temple.xml
@@ -68,6 +68,7 @@
     <BatchTimeModifier>0.8</BatchTimeModifier>
     <Entities datatype="tokens">
       units/{civ}/support_healer_b
+      units/{civ}/champion_infantry_hearler
     </Entities>
   </Trainer>
   <Vision>
