lepun para stable e correção de numero de fem iniciais

--- a/simulation/templates/template_structure_military_stable.xml
+++ b/simulation/templates/template_structure_military_stable.xml
@@ -61,6 +61,8 @@
     <Entities datatype="tokens">
       units/{civ}/cavalry_scout
       units/{civ}/camelry_scout
+      units/{civ}/cavalry_slinger_b
+      units/{civ}/cavalry_clubman_b
       units/{civ}/cavalry_axeman_b
       units/{civ}/cavalry_swordsman_b
       units/{civ}/cavalry_spearman_b
