--- a/simulation/templates/template_structure_military_arsenal.xml
+++ b/simulation/templates/template_structure_military_arsenal.xml
@@ -69,6 +69,8 @@
       units/{civ}/siege_ram
       units/{civ}/siege_tower
       units/{civ}/siege_incediary_archer_packed
+      units/{civ}/infantry_incendiary
+      units/{civ}/siege_ladder
     </Entities>
   </Trainer>
   <Vision>
