--- a/simulation/templates/template_unit_siege_incendiary_archer.xml
+++ b/simulation/templates/template_unit_siege_incendiary_archer.xml
@@ -27,7 +27,10 @@
         <FriendlyFire>false</FriendlyFire>
         <LaunchPoint y="3"/>
       </Projectile>
-      <PreferredClasses datatype="tokens">Human</PreferredClasses>
+      <PreferredClasses datatype="tokens">
+        Structure
+        !Permanent
+      </PreferredClasses>
       <RangeOverlay>
         <LineTexture>outline_border.png</LineTexture>
         <LineTextureMask>outline_border_mask.png</LineTextureMask>
