--- a/simulation/templates/template_structure_military_stable.xml
+++ b/simulation/templates/template_structure_military_stable.xml
@@ -70,6 +70,7 @@
       units/{civ}/cavalry_archer_b
       units/{civ}/cavalry_crossbowman_b
       units/{civ}/cavalry_throwing_b
+      units/{civ}/cavalry_clubman_b
       units/{civ}/champion_cavalry
       units/{civ}/champion_cavalry_spearman
       units/{civ}/champion_cavalry_swordsman
